force-app/main/default/objects/FEC_Card_Delivery__c/FEC_Card_Delivery__c.object-meta.xml
<CustomObject>
    <label>Card Delivery</label>
    <nameField>
        <displayFormat>CDN - {0}</displayFormat>
        <label>Card Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Delivery</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>