force-app/main/default/objects/FEC_Card_Delivery__c/fields/FEC_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>