force-app/main/default/objects/FEC_Card_Delivery__c/fields/FEC_Recipient__c.field-meta.xml
<CustomField>
    <fullName>FEC_Recipient__c</fullName>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>