force-app/main/default/objects/FEC_Card_Delivery__c/fields/FEC_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>