force-app/main/default/objects/FEC_Card_Delivery__c/fields/FEC_Type_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Type_of_Issue__c</fullName>
    <label>Type of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>